--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,4 +13,7 @@
     </div>
   </div>
 </nav>
-<router-outlet></router-outlet>
+
+<div class="container-fluid">
+  <router-outlet></router-outlet>
+</div>
