--- a/src/app/memory-list/memory-list.component.html
+++ b/src/app/memory-list/memory-list.component.html
@@ -1,6 +1,6 @@
 <div class="input-group mt-2 mb-2">
 
-  <input type="text" class="form-control" placeholder="Was willst du nicht vergessen?" [(ngModel)]="memoryString"
+  <input type="text" class="form-control" placeholder="Was willst du dir merken?" [(ngModel)]="memoryString"
     (keyup.enter)="addMemory()">
   <div class="input-group-append">
     <button class="btn btn-primary" type="button" (click)="addMemory()">Button</button>
