aded local Storage for memories

--- a/src/app/memory-list/memory-list.component.html
+++ b/src/app/memory-list/memory-list.component.html
@@ -8,5 +8,5 @@
 </div>
 
 <ul class="list-group" *ngFor="let memory of memoryList$ | async">
-  <li class="list-group-item">{{memory}}</li>
+  <li class="list-group-item">{{memory.text}}</li>
 </ul>
