--- a/src/app/card-link/card-link.component.html
+++ b/src/app/card-link/card-link.component.html
@@ -1,1 +1,5 @@
-<p>card-link works!</p>
+<div class="row mt-2">
+    <div class="col-sm-6 col-md-4 col-xl-3" *ngFor="let card of cards">
+        <app-card [card]="card"></app-card>
+    </div>
+</div>
