--- a/src/app/card-link/card-link.component.html
+++ b/src/app/card-link/card-link.component.html
@@ -1,5 +1,10 @@
 <div class="row mt-2">
-    <div class="col-sm-6 col-md-4 col-xl-3" *ngFor="let card of cards">
-        <app-card [card]="card"></app-card>
-    </div>
+  <div class="col-sm-6 col-md-4 col-xl-3" *ngFor="let card of cards$ | async">
+    <app-card [card]="card" (edit)="handleEdit(card)"></app-card>
+  </div>
+</div>
+<div class="btn-group" role="group" aria-label="toolbar-card">
+  <button type="button" class="btn btn-secondary" (click)="addCard()">Hinzufügen</button>
+  <button type="button" class="btn btn-secondary">Middle</button>
+  <button type="button" class="btn btn-secondary">Right</button>
 </div>
