--- a/src/app/card-link/card/card.component.html
+++ b/src/app/card-link/card/card.component.html
@@ -1,9 +1,12 @@
 <div class="card mt-1 mb-1">
-    <div class="card-body">
-        <h5 class="card-title">{{card?.title}}</h5>
-        <p class="card-text" *ngIf="card?.text">
-            {{card?.text}}
-        </p>
-        <a href="{{card?.url}}" class="btn btn-primary">Go</a>
+  <div class="card-body">
+    <h5 class="card-title">{{card?.title}}</h5>
+    <p class="card-text" *ngIf="card?.text">
+      {{card?.text}}
+    </p>
+    <div class="btn-group" role="group" aria-label="toolbar-card">
+      <a href="{{card?.url}}" class="btn btn-primary">Go</a>
+      <button type="button" (click)="editEvent(event)" class="btn btn-secondary">Edit</button>
     </div>
+  </div>
 </div>
