edit und add eingebaut

--- a/src/app/card-link/card-link.component.html
+++ b/src/app/card-link/card-link.component.html
@@ -5,6 +5,6 @@
 </div>
 <div class="btn-group" role="group" aria-label="toolbar-card">
   <button type="button" class="btn btn-secondary" (click)="addCard()">Hinzufügen</button>
-  <button type="button" class="btn btn-secondary">Middle</button>
-  <button type="button" class="btn btn-secondary">Right</button>
+  <!-- <button type="button" class="btn btn-secondary">Middle</button>
+  <button type="button" class="btn btn-secondary">Right</button> -->
 </div>
