--- a/src/app/card-link/edit-card/edit-card.component.html
+++ b/src/app/card-link/edit-card/edit-card.component.html
@@ -1,4 +1,18 @@
-<p>edit-card works!</p>
+<h3 *ngIf="isEdit">Bearbeiten</h3>
+<h3 *ngIf="!isEdit">Erstellen</h3>
 
-
-{{routeParams$ | async | json}}
+<div class="form-group">
+  <label for="title">Titel</label>
+  <input type="text" class="form-control" id="title" [(ngModel)]="card.title" placeholder="Titel">
+</div>
+<div class="form-group">
+  <label for="url">Url</label>
+  <input type="text" class="form-control" id="url" [(ngModel)]="card.url" placeholder="Url">
+  <small id="url-help" class="form-text text-muted">die Url sollte richtig sein ;-)</small>
+</div>
+<div class="form-group">
+  <label for="text">Text</label>
+  <input type="text" class="form-control" id="text" [(ngModel)]="card.text" placeholder="Text">
+</div>
+<button type="button" *ngIf="!isEdit" class="btn btn-primary" (click)="add()">Hinzufügen</button>
+<button type="button" *ngIf="isEdit" class="btn btn-primary" (click)="edit()">Bearbeiten</button>
