--- a/src/app/card-link/card/card.component.html
+++ b/src/app/card-link/card/card.component.html
@@ -6,7 +6,8 @@
     </p>
     <div class="btn-group" role="group" aria-label="toolbar-card">
       <a href="{{card?.url}}" class="btn btn-primary">Go</a>
-      <button type="button" (click)="editEvent(event)" class="btn btn-secondary">Edit</button>
+      <button type="button" (click)="editEvent(event)" class="btn btn-secondary">Bearbeiten</button>
+      <button type="button" (click)="deleteEvent(event)" class="btn btn-secondary">Löschen</button>
     </div>
   </div>
 </div>
