--- a/src/app/card-link/edit-card/edit-card.component.html
+++ b/src/app/card-link/edit-card/edit-card.component.html
@@ -3,7 +3,7 @@
 
 <div class="form-group">
   <label for="title">Titel</label>
-  <input type="text" class="form-control" id="title" [(ngModel)]="card.title" placeholder="Titel">
+  <input type="text" class="form-control" id="title" #firstInput [(ngModel)]="card.title" placeholder="Titel">
 </div>
 <div class="form-group">
   <label for="url">Url</label>
