--- a/src/app/card-link/card/card.component.html
+++ b/src/app/card-link/card/card.component.html
@@ -6,8 +6,8 @@
     </p>
     <a href="{{card?.url}}" class="btn btn-primary btn-block">LINK!</a>
     <div class="btn-group mt-1" role="group" aria-label="toolbar-card">
-      <button type="button" (click)="editEvent(event)" class="btn btn-secondary btn-sm">Bearbeiten</button>
-      <button type="button" (click)="deleteEvent(event)" class="btn btn-secondary btn-sm">Löschen</button>
+      <button type="button" (click)="editEvent()" class="btn btn-secondary btn-sm">Bearbeiten</button>
+      <button type="button" (click)="deleteEvent()" class="btn btn-secondary btn-sm">Löschen</button>
     </div>
   </div>
 </div>
