--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,32 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">Startseite</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/memories" routerLinkActive="active">Memory</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/cards" routerLinkActive="active">Links</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
+<div *ngIf="user$ | async as user; else login">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="#">Startseite</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/memories" routerLinkActive="active">Memory</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/cards" routerLinkActive="active">Links</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="signOut()">Sign out</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</div>
 <div class="container-fluid">
   <router-outlet></router-outlet>
 </div>
+
+
+<ng-template #login>
+  <div class="loading" *ngIf="!checkUser || loading">
+    loading
+  </div>
+</ng-template>
